[package]
name = "etf"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "etf"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-spl = { version = "0.31.1", features = ["metadata", "associated_token"] }
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
